--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,72 @@
 
 }
 
-html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
-
-
 *,
 *:before,
 *:after {
     box-sizing: inherit;
 }
 
+/*!UTILIDADES  */
 
+.no-margin {
+    margin: 0;
+}
+
+.no-pading {
+    padding: 0;
+}
+
+
+/* !Globales */
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: var(--fuentePrincipal);
+    font-size: 1.6rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
+
+h1,
+h2,
+h3 {
+    font-weight: bold;
+    text-transform: capitalize;
+
+}
+
+h1 {
+    font-size: 3.4rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 2.2rem;
+}
+
+
+/*!NAV  */
+
+
+/* !CABECERA */
+
+
+/*!SOBRE MI  */
+
+
+/*!PROYECTOS  */
+
+
+/*!HABILIDADES  */
+
+
+
+/*!FOOTER  */
