--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 :root {
     --fuentePrincipal: "Montserrat", system-ui;
     --negro: #000;
+    --blanco: #fff;
+    --azulPrimario: #5852f8;
+    --azulSecundario: #241fcf;
 }
 
 *,
@@ -10,6 +13,10 @@
 }
 
 /*!UTILIDADES  */
+
+.text-center {
+    text-align: center;
+}
 
 .no-margin {
     margin: 0;
@@ -33,12 +40,18 @@ body {
     margin: 0 auto;
 }
 
+@media (min-width: 1024px) {
+    body {
+        width: 70%;
+    }
+}
 
 h1,
 h2,
 h3 {
     font-weight: bold;
     text-transform: capitalize;
+    color: var(--azulPrimario);
 
 }
 
@@ -56,6 +69,9 @@ h3 {
 
 li {
     list-style: none;
+    color: var(--azulSecundario);
+    text-transform: capitalize;
+    font-weight: bold;
 }
 
 
@@ -96,10 +112,10 @@ li {
         transition: font-size 0.3s ease;
 
         border-left: 1px solid var(--negro);
-        border-image: linear-gradient(to bottom, transparent 30%, var(--negro) 10%, var(--negro) 90%, transparent 70%);
+        border-image: linear-gradient(to bottom, transparent 30%, var(--azulSecundario) 10%, var(--azulPrimario) 90%, transparent 70%);
         border-image-slice: 1;
         padding-left: 1rem;
-        
+
     }
 
     .nav-item:first-child {
@@ -107,6 +123,7 @@ li {
     }
 
     .nav-item:hover {
+        cursor: pointer;
         font-size: 2.3rem;
 
     }
@@ -118,11 +135,61 @@ li {
     .contenedor {
         justify-content: center;
         margin-top: 2rem;
-
     }
 }
 
 /* !CABECERA */
+
+.contenido-principal {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: auto 20rem;
+    justify-items: center;
+    align-items: center;
+}
+
+.titulo-prs {
+    margin-top: 0.3rem;
+    grid-column: 1/3;
+}
+
+.presentacion-img {
+    height: 14rem;
+    width: 14rem;
+    grid-column: 2/3;
+    
+}
+
+.imagen-autor {
+    height: 100%;
+    width: 100%;
+    border-radius: 1.6rem;
+
+}
+
+.iconos-redes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.redes__psr {
+    display: flex;
+    border: 0.1rem solid grey;
+    border-radius: 0.8rem;
+}
+
+.redes-psr:hover {
+    cursor: pointer;
+}
+
+.redes__svg {
+    width: 3rem;
+    height: 3rem;
+}
+
+
 
 
 /*!SOBRE MI  */
