--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+
+    scroll-behavior: smooth;
 }
 
 body {
@@ -40,9 +42,17 @@ body {
     margin: 0 auto;
 }
 
-@media (min-width: 1024px) {
+
+@media (min-width: 768px) {
     body {
         width: 70%;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    body {
+        width: 50%;
     }
 }
 
@@ -72,6 +82,11 @@ li {
     color: var(--azulSecundario);
     text-transform: capitalize;
     font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    color: var(--azulSecundario);
 }
 
 
@@ -106,6 +121,10 @@ li {
         display: flex;
         gap: 3rem;
         align-items: center;
+    }
+
+    .contenedor {
+        justify-content: center;
     }
 
     .nav-item {
@@ -148,23 +167,27 @@ li {
     align-items: center;
 }
 
+
 .titulo-prs {
     margin-top: 0.3rem;
     grid-column: 1/3;
 }
 
 .presentacion-img {
-    height: 14rem;
-    width: 14rem;
+    height: 100%;
+    width: 90%;
     grid-column: 2/3;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .imagen-autor {
-    height: 100%;
     width: 100%;
-    border-radius: 1.6rem;
-
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    border-radius: 1.2rem;
 }
 
 .iconos-redes {
@@ -184,12 +207,42 @@ li {
     cursor: pointer;
 }
 
+h1 {
+    margin-bottom: 0rem;
+}
+
 .redes__svg {
     width: 3rem;
     height: 3rem;
 }
 
 
+@media (min-width: 1024px) {
+
+    .contenido-principal {
+        display: grid;
+        grid-template-rows: 10rem auto;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .presentacion-img {
+        margin-top: 4rem;
+        grid-row: 1/3;
+        width: 80%;
+        height: 100%;
+
+    }
+
+    .titulo-prs {
+        grid-column: 1/2;
+    }
+
+    .contenido-principal__visual {
+        margin-top: -1rem;
+    }
+
+}
 
 
 /*!SOBRE MI  */
