--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ a {
 
     .nav-item {
         transition: font-size 0.3s ease;
-
         border-left: 1px solid var(--negro);
         border-image: linear-gradient(to bottom, transparent 30%, var(--azulSecundario) 10%, var(--azulPrimario) 90%, transparent 70%);
         border-image-slice: 1;
@@ -166,6 +165,9 @@ a {
         margin-top: 2rem;
     }
 }
+
+
+
 
 /* !CABECERA */
 
@@ -289,7 +291,12 @@ h1 {
     padding: 1rem 1.5rem;
     background: var(--azulPrimario);
     border-radius: 1rem;
+    opacity: 0.8;
     font-size: 1.6rem;
+}
+
+.estudios-titulo-princ {
+    text-transform: uppercase;
 }
 
 @media (min-width: 768px) {
@@ -322,8 +329,6 @@ h1 {
         padding: 1rem 5rem;
     }
 
-
-
     .estudios {
         padding: 2rem 3rem;
         font-size: 2rem;
@@ -342,7 +347,71 @@ h1 {
 
 
 /*!HABILIDADES  */
+.habilidades {
+    border: 1rem solid red;
+    display: flex;
+    flex-direction: column;
+}
 
 
+.habilidades__iconos {
+    display: flex;
+    flex-direction: column;
+    height: 10rem;
+
+    width: 100%;
+}
+
+.espec__icons {
+    display: grid;
+    border-radius: 1rem;
+    grid-template-columns: 50% 50%;
+    gap: 1rem;
+}
+
+.habilidades__svg {
+    width: 100%;
+    height: 100%;
+}
+
+.habilidades__svg svg {
+    width: 100%;
+    height: 100%;
+    padding: 6rem;
+}
+
+@media (min-width: 768px) {
+    .habilidades__iconos {
+        margin-top: 10rem;
+        margin-bottom: 15rem;
+        display: grid;
+        grid-template-columns: repeat(3, 31%);
+        grid-template-rows: auto;
+        place-content: center;
+        gap: 1rem;
+    }
+
+    .espec__icons {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+    }
+
+    .habilidades__svg {
+
+        flex-basis: calc(33.333% - 5px);
+    }
+
+    .habilidades__svg svg {
+        padding: 0rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .habilidades__iconos {
+        margin-top: 14rem;
+    }
+}
 
 /*!FOOTER  */
