--- a/css/styles.css
+++ b/css/styles.css
@@ -118,13 +118,10 @@ a {
     height: 100%;
     display: flex;
     justify-content: end;
+    margin-right: 2rem;
 
 }
 
-.svg-nav-bar {
-    height: 100%;
-    width: 3rem;
-}
 
 @media (min-width: 1024px) {
     .navegacion {
@@ -143,7 +140,6 @@ a {
         border-image: linear-gradient(to bottom, transparent 30%, var(--azulSecundario) 10%, var(--azulPrimario) 90%, transparent 70%);
         border-image-slice: 1;
         padding-left: 1rem;
-
     }
 
     .nav-item:first-child {
@@ -348,70 +344,64 @@ h1 {
 
 /*!HABILIDADES  */
 .habilidades {
-    border: 1rem solid red;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
+    height: auto;
+    padding: 2rem;
 }
-
 
 .habilidades__iconos {
-    display: flex;
-    flex-direction: column;
-    height: 10rem;
-
+    height: auto;
     width: 100%;
-}
-
-.espec__icons {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     display: grid;
-    border-radius: 1rem;
-    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    place-content: center;
     gap: 1rem;
 }
 
+
+.espec__icons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.habilidades h3 {
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
 .habilidades__svg {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
+    flex-basis: calc(33.333% - 5px);
+}
+
+@media (min-width: 768px) {
+    .habilidades__iconos {
+        grid-template-columns: repeat(3, 31%);
+        margin-top: 3rem;
+    }
+}
+
+.habilidades__svg svg:hover {
+    cursor: pointer;
+    padding: 0rem;
+    
 }
 
 .habilidades__svg svg {
     width: 100%;
     height: 100%;
-    padding: 6rem;
+    padding: 1rem;
+    transition: padding 0.3s ease;
 }
 
-@media (min-width: 768px) {
-    .habilidades__iconos {
-        margin-top: 10rem;
-        margin-bottom: 15rem;
-        display: grid;
-        grid-template-columns: repeat(3, 31%);
-        grid-template-rows: auto;
-        place-content: center;
-        gap: 1rem;
-    }
 
-    .espec__icons {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 0.5rem;
-    }
-
-    .habilidades__svg {
-
-        flex-basis: calc(33.333% - 5px);
-    }
-
-    .habilidades__svg svg {
-        padding: 0rem;
-    }
-}
-
-@media (min-width: 1024px) {
-    .habilidades__iconos {
-        margin-top: 14rem;
-    }
-}
 
 /*!FOOTER  */
