--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,79 @@ h1 {
 /*!PROYECTOS  */
 
 
+.cards {
+    display: grid;
+    /* background-color: rgb(212, 203, 203); */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0.5rem;
+    grid-template-areas:
+        "card1 card2 card2"
+        "card1 card3 card4"
+        "card5 card5 card6"
+    ;
+    border-radius: 1rem;
+}
+
+.card--1,
+.card--2,
+.card--3,
+.card--4,
+.card--5,
+.card--6 {
+    border-radius: 1rem;
+    text-align: center;
+    transition: transform 0.3s ease, border-radius 0.3s ease;
+}
+
+.card--1:hover,
+.card--2:hover,
+.card--3:hover,
+.card--4:hover,
+.card--5:hover,
+.card--6:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    border-radius: 1.5rem;
+}
+
+
+
+.card--1 {
+    background-color: red;
+    grid-area: card1;
+}
+
+.card--2 {
+    background-color: blue;
+    grid-area: card2;
+}
+
+.card--3 {
+    background-color: yellow;
+    grid-area: card3;
+}
+
+.card--4 {
+    background-color: tomato;
+    grid-area: card4;
+
+}
+
+.card--5 {
+    background-color: violet;
+    grid-area: card5;
+}
+
+.card--6 {
+    background-color: bisque;
+    grid-area: card6;
+}
+
+
+
+
+
 /*!HABILIDADES  */
 .habilidades {
     border-radius: 1rem;
@@ -392,10 +465,10 @@ h1 {
 .habilidades__svg svg:hover {
     cursor: pointer;
     padding: 0rem;
-    
-}
 
-.habilidades__svg svg {
+}
+    
+    .habilidades__svg svg {
     width: 100%;
     height: 100%;
     padding: 1rem;
