--- a/css/styles.css
+++ b/css/styles.css
@@ -14,17 +14,23 @@
 
 /*!UTILIDADES  */
 
-.oculto {
-    animation: fade-out 0.5s forwards;
+@media (width >=320px) and (width <=1023px) {
 
-}
 
-@keyframes fade-out {
-    to {
-        display: none !important;
-        opacity: 0;
+
+
+    .oculto {
+        animation: fade-out 0.5s forwards;
+
     }
 
+    @keyframes fade-out {
+        to {
+            opacity: 0;
+            display: none !important;
+        }
+
+    }
 }
 
 .text-center {
@@ -436,20 +442,34 @@ h1 {
 .card--4,
 .card--5,
 .card--6 {
+    color: var(--blanco);
     border-radius: 1rem;
     text-align: center;
-    transition: transform 0.3s ease, border-radius 0.3s ease;
 }
 
-.card--1:hover,
-.card--2:hover,
-.card--3:hover,
-.card--4:hover,
-.card--5:hover,
-.card--6:hover {
-    transform: scale(1.2);
-    cursor: pointer;
-    border-radius: 1.5rem;
+@media (min-width: 768px) {
+
+    .card--1:hover,
+    .card--2:hover,
+    .card--3:hover,
+    .card--4:hover,
+    .card--5:hover,
+    .card--6:hover {
+        transform: scale(1.2);
+        cursor: pointer;
+        border-radius: 1.5rem;
+    }
+
+    .card--1,
+    .card--2,
+    .card--3,
+    .card--4,
+    .card--5,
+    .card--6 {
+
+        transition: transform 0.3s ease, border-radius 0.3s ease;
+    }
+
 }
 
 
