--- a/css/styles.css
+++ b/css/styles.css
@@ -424,18 +424,8 @@ h1 {
     text-transform: capitalize;
 }
 
-.cards {
-    display: grid;
-    margin-top: 5rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0.5rem;
-    grid-template-areas:
-        "card1 card2 card2"
-        "card1 card3 card4"
-        "card5 card5 card6"
-    ;
-    border-radius: 1rem;
+.card__title {
+    color: var(--blanco);
 }
 
 .card--1,
@@ -447,10 +437,37 @@ h1 {
     color: var(--blanco);
     border-radius: 1rem;
     text-align: center;
+    padding: 0.3rem;
 }
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas:
+        "card1 card2"
+        "card3 card3"
+        "card5 card6"
+        "card4 card4"
+    ;
+    gap: 1rem;
+}
+
 
 @media (min-width: 768px) {
 
+    .cards {
+        margin-top: 5rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 0.5rem;
+        grid-template-areas:
+            "card1 card2 card2"
+            "card1 card3 card4"
+            "card5 card5 card6"
+        ;
+        border-radius: 1rem;
+    }
 
 
     .card--1:hover,
@@ -470,7 +487,9 @@ h1 {
     .card--4,
     .card--5,
     .card--6 {
-
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         transition: transform 0.3s ease, border-radius 0.3s ease;
     }
 
@@ -488,7 +507,7 @@ h1 {
 }
 
 .card--3 {
-    background-color: yellow;
+    background-color: rgb(9, 199, 186);
     grid-area: card3;
 }
 
