--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
     --azulPrimario: #5852f8;
     --azulSecundario: #241fcf;
     --footer: rgba(88, 82, 248, 0.7);
+
+
+    --bg: #110921;
+    --purple: #3720b4;
+    --green: #5ff8c2;
+    --font: 'Roboto Mono', sans-serif;
 }
 
 *,
@@ -19,7 +25,6 @@
 
     .oculto {
         animation: fade-out 0.5s forwards;
-
     }
 
     @keyframes fade-out {
@@ -151,30 +156,90 @@ a {
 
 }
 
-
-/* .contenedor {
-    height: 5rem;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 1.4rem;
-    margin-bottom: 2rem;
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 80px;
+    height: 40px;
+    background-color: var(--purple);
+    border-radius: 40px;
+    transition: all 0.3s;
+    cursor: pointer;
 }
 
-.contenedor__menu-mbl {
-    width: 8rem;
-    height: 100%;
-    margin-right: 2rem;
-} */
+.switch:after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    background-color: white;
+    top: 5px;
+    left: 5px;
+    transition: all 0.3s;
+}
 
+input[type='checkbox']:checked+.switch:after {
+    transform: translateX(40px);
+    background-color: var(--azulSecundario);
+}
+
+input[type='checkbox']:checked+.switch {
+    background-color: var(--green);
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
+}
+
+.btn {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.switch-lan,
+.lan-contenedor {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width: 540px) {
+    .btn {
+        width: 30%;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .btn {
+        width: 15%;
+    }
+
+}
 
 .contenedor {
     height: 5rem;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    align-items: center;
     margin-top: 1.4rem;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.lan-contenedor {
+    height: 100%;
+    width: 70%;
+}
+
+.lan-contenedor svg {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .contenedor__menu-mbl {
