(Trabajo de Otra Materia) terminado de agregar elementos al json y cambiar intereses del html, falta la barra de nav en 480 que sigue bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,10 @@ a {
     align-items: center;
     width: 90%;
     opacity: 0.9;
-    margin: 4rem auto;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 1rem;
 }
 
